css/ospos.css
html, body
{
	height: 100%;
}

a.none
{
	text-decoration: none;
}

.topbar
{
	color: #eee;
	font-size: 12px;
	background: #182735;
	padding: 0.2em;
}

.navbar
{
	border-radius: 0;
}

.navbar-default .navbar-nav > .active > a, 
.navbar-default .navbar-nav > .active > a:hover, 
.navbar-default .navbar-nav > .active > a:focus
{
	color: #2C3E50;
	background-color: #FFFFFF;
}

.jumbotron.push-spaces
{
	margin:0; /*add this*/
}

.navbar .menu-icon
{
	text-align: center;
	font-size: 12px;
}

.navbar .menu-icon img
{
	width: 24px;
}

.wrapper
{
	font-size: 14px;
}

#title_bar
{
	position: relative;
	width: 100%;
	height: 3em;
}

#page_title
{
	font-size: 22px;
	font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-weight: 400;
}

#page_subtitle
{
	margin-bottom: 0.5em;
	font-size: 16px;
	font-weight: bold;
	text-align: center;
}

#home_module_list
{
	position: relative;
	padding: 2em 0;
	text-align: center;
}

.module_item
{
	min-width: 7em;
	display: inline-block;
	text-align: center;
}

.module_item a
{
	display: block;
}

#config_wrapper
{
	text-align: center;
}

#config_info
{
	text-align: left;
}

#config_info .wide
{
	width: 30%;
}

#footer
{
	margin-top: 5em;
	position: relative;
	text-align: center;
	font-size: 11px;
	color: #777777;
	clear: both;
}

a.rollover img
{
	padding: 3px;	
}

#filters.btn-group
{
	vertical-align: none;
}

button.btn.dropdown-toggle.btn-sm
{
	background-color: white;
	color: black;
	border: 2px solid #dce4ec;
}

.dropdown-menu
{
	font-size: 13px;
}

label.required
{
	color:red;
}

@media (min-width: 768px)
{	
	.navbar-nav > li > a
	{
		padding: 10px 10px 9px;
	}

	.modal-dlg .modal-dialog
	{
		width: 500px;
	}

	.modal-dlg-wide .modal-dialog
	{
		width: 750px;
	}
}

.modal-body
{
	max-height: calc(100vh - 212px);
	overflow-y: auto;
}

.no-gutter [class*="-1"] {
	padding-right:0;
}

